# NJK

./: .gitignore  README.md  docker-compose-server.yml  permit_restart.sh  pip-run.sh  pyproject.toml  restart.sh  uv-add.sh
src/: bbh_test.py  create_db.py  create_index.py  main.py  msg_handler.py
src/configs/: pgdb.py
src/models/: at_user.py  group.py  image.py  img_whitelist.py  message.py  msg_topic.py  msg_word.py  topic.py  user.py  word.py
src/services/: ai_client.py  bbh_client.py  duplicate_detector.py  img_handler.py  msg_handler.py
tests/: wstest.py
